Website: Temporarily redirect 1_48_0 to the beta docs.
[SVN r75142]

--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -25,6 +25,7 @@ RewriteRule ^tools/build/(.*\.(?:png|gif|jpg|jpeg|jpe|css|js|pdf|dtd))$ archives
 # Redirect from symbolic names to current versions.
 RewriteRule ^libs/release(/.*)?$ libs/1_48_0_beta1$1 [R]
 RewriteRule ^libs/development(/.*)?$ libs/1_48_0_beta1$1 [R]
+RewriteRule ^libs/1_48_0(/.*)?$ libs/1_48_0_beta1$1 [R]
 
 # Rewrite specific versions to the dynamic handlers.
 RewriteRule ^libs/([0-9_]+(?:beta[0-9]*|snapshot)?)/?$ libraries.php/$1 [L]
