--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -23,9 +23,8 @@ RewriteCond %{DOCUMENT_ROOT}/doc/archives/boost-build/$1 -f
 RewriteRule ^tools/build/(.*\.(?:png|gif|jpg|jpeg|jpe|css|js|pdf|dtd))$ archives/boost-build/$1 [L,NC]
 
 # Redirect from symbolic names to current versions.
-RewriteRule ^libs/release(/.*)?$ libs/1_48_0_beta1$1 [R]
-RewriteRule ^libs/development(/.*)?$ libs/1_48_0_beta1$1 [R]
-RewriteRule ^libs/1_48_0(/.*)?$ libs/1_48_0_beta1$1 [R]
+RewriteRule ^libs/release(/.*)?$ libs/1_48_0$1 [R]
+RewriteRule ^libs/development(/.*)?$ libs/1_48_0$1 [R]
 
 # Rewrite specific versions to the dynamic handlers.
 RewriteRule ^libs/([0-9_]+(?:beta[0-9]*|snapshot)?)/?$ libraries.php/$1 [L]
