--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -6,7 +6,7 @@ RewriteBase /doc
 RewriteCond %{HTTP_HOST} ^boost\.org [NC]
 RewriteRule ^.*$ http://www\.boost\.org%{REQUEST_URI} [R=301]
 
-RewriteRule ^html(/.*)?$ libs/release/doc/html$1 [R]
+RewriteRule ^html(/.*)?$ libs/release/doc/html$1 [R=301]
 
 # Always serve up the latest css/image files in doc/html and doc/src.
 RewriteRule ^libs/[^/]*/doc/(?:html|src)/(.*\.css)$ libs/common/doc/src/$1 [L]
