--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -22,6 +22,10 @@ RewriteRule ^libs/([0-9_]+(?:beta[0-9]*|snapshot)?/.*\.(?:png|gif|jpg|jpeg|jpe|c
 RewriteCond %{DOCUMENT_ROOT}/doc/archives/boost-build/$1 -f
 RewriteRule ^tools/build/(.*\.(?:png|gif|jpg|jpeg|jpe|css|js|pdf|dtd))$ archives/boost-build/$1 [L,NC]
 
+# Redirect library directories before redirecting to the current version.
+# Trying to establish a standard location.
+RewriteRule ^libs/release/libs/([^./]*)$ libs/release/libs/$1/ [R=301]
+
 # Redirect from symbolic names to current versions.
 RewriteRule ^libs/release(/.*)?$ libs/1_48_0$1 [R]
 RewriteRule ^libs/development(/.*)?$ libs/1_48_0$1 [R]
