Website: Try to establish a single link for libraries.
[SVN r75658]

--- a/.htaccess
+++ b/.htaccess
@@ -55,6 +55,7 @@ RewriteRule ^getting_starged_windows.html doc/libs/release/more/getting_started/
 # before *any* rewrite rules are checked. Which is just nasty!!
 RewriteRule ^boost([.]png)?/(.*) doc/libs/release/boost/$2 [R=permanent,L]
 # The libs subdirs
+RewriteRule ^libs/([^./]*)$ doc/libs/release/libs/$1/ [R=permanent,L]
 RewriteRule ^libs(/.*)?$ doc/libs/release/libs$1 [R=permanent,L]
 # The people pages
 RewriteRule ^people/people.htm users/people.html [R=permanent,L]
