--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -25,6 +25,7 @@ RewriteRule ^tools/build/(.*\.(?:png|gif|jpg|jpeg|jpe|css|js|pdf|dtd))$ archives
 # Redirect library directories before redirecting to the current version.
 # Trying to establish a standard location.
 RewriteRule ^libs/release/libs/([^./]*)$ libs/release/libs/$1/ [R=301]
+RewriteRule ^libs/development/libs/([^./]*)$ libs/development/libs/$1/ [R=301]
 
 # Redirect from symbolic names to current versions.
 RewriteRule ^libs/release(/.*)?$ libs/1_48_0$1 [R]
