Remove support page, and links to it.
Redirect to community area, which is not the same thing, but probably
still better than an empty page with a link to closed-down company.

[SVN r84366]

--- a/support/.htaccess
+++ b/support/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
 RewriteBase /support
 
+RewriteRule ^(index.html)? http://www.boost.org/community/ [R=301]
 RewriteRule ^bugs.html http://www.boost.org/development/bugs.html [R=301]
