--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,7 @@ configure    eol=lf svneol=LF#text/x-sh
 *.cmake      text svneol=native#text/plain
 *.css        text svneol=native#text/css
 *.dtd        text svneol=native#text/xml
+*.htc        eol=crlf
 *.htm        text svneol=native#text/html
 *.html       text svneol=native#text/html
 *.ini        text svneol=native#text/plain
