--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -39,11 +39,16 @@ RewriteRule ^libs/$ libraries.php [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^libs/(master|develop|latest|[0-9_]+(?:b(?:eta)?[0-9]*|snapshot)?)/(.+)$ display_libs.php/$1/$2 [L]
 
-# Redirect boost build/bjam documentation to new boost build location.
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(regression)/(.*)$ display_extra_docs.php/$1/$2 [L]
+
+# Redirect tool documentation to new locations.
 RewriteRule ^tools(?:\.html)?/jam/jam/(language|miscellaneous|history).html$ /boost-build2/doc/html/jam/$1.html [R=301]
 RewriteRule ^tools(?:\.html)?/jam(/|$) /boost-build2/doc/html/bbv2/jam.html [R=301]
 RewriteRule ^tools(?:\.html)?/build$ /boost-build2/ [R=301]
 RewriteRule ^tools(?:\.html)?/build/(.*) /boost-build2/$1 [R=301]
+RewriteRule ^tools(?:\.html)?/(regression)/?(.*)$ /doc/$1/$2 [R=301]
+RewriteRule ^(regression)$ /doc/$1/ [R=301]
 
 # Other tools
 RewriteRule ^tools(\.html)?/(.*) libs/release/tools/$2 [R]
