Better config in travis.
No need to use config file for tester, as the required extensions seem
to be built into the php executable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ php:
 
 install:
     - cd ${TRAVIS_BUILD_DIR}/common/code/test
-    - composer install
+    - composer install --no-interaction --prefer-source
 
 script:
     - cd ${TRAVIS_BUILD_DIR}/common/code/test
-    - ./vendor/bin/tester -p php -c config/php.ini
+    - ./vendor/bin/tester -p php
     - cd ${TRAVIS_BUILD_DIR}/
     - 'find * -name "vendor" -prune -o -name "*.php" -print | xargs -n 1 php -l'
