Hide some directories.
It's nothing that isn't publicly available in this repo, but there you go.

--- a/.htaccess
+++ b/.htaccess
@@ -73,3 +73,8 @@ RewriteRule ^LICENSE-1.0$ LICENSE_1_0.txt [R=permanent,L]
 
 ########## Other redirects
 RewriteRule ^b2/?$ /build/ [R=permanent,L]
+
+########## Hide .git and stop directory listings.
+########## Everything's available on github anyway, but just in case.
+RewriteRule ^[.]git/ "-" [F,L]
+Options -Indexes
