Move tests into subdirectory.
To avoid running all the vendor tests on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
 
 script:
     - cd ${TRAVIS_BUILD_DIR}/common/code/test
-    - ./vendor/bin/tester -p php
+    - ./vendor/bin/tester -p php tests
     - cd ${TRAVIS_BUILD_DIR}/
     - 'find * -name "vendor" -prune -o -name "*.php" -print | xargs -n 1 php -l'
