Also hide nested .git directories.

--- a/.htaccess
+++ b/.htaccess
@@ -77,4 +77,5 @@ RewriteRule ^b2/?$ /build/ [R=permanent,L]
 ########## Hide .git and stop directory listings.
 ########## Everything's available on github anyway, but just in case.
 RewriteRule ^[.]git/ "-" [F,L]
+RewriteRule /[.]git/ "-" [F,L]
 Options -Indexes
