Actually, forbid access to all dot files.

--- a/.htaccess
+++ b/.htaccess
@@ -74,8 +74,8 @@ RewriteRule ^LICENSE-1.0$ LICENSE_1_0.txt [R=permanent,L]
 ########## Other redirects
 RewriteRule ^b2/?$ /build/ [R=permanent,L]
 
-########## Hide .git and stop directory listings.
+########## Hide dot files/directories and stop directory listings.
 ########## Everything's available on github anyway, but just in case.
-RewriteRule ^[.]git/ "-" [F,L]
-RewriteRule /[.]git/ "-" [F,L]
+RewriteRule ^[.] "-" [F,L]
+RewriteRule /[.] "-" [F,L]
 Options -Indexes
