Link to snapshot download page from dev release notes.

--- a/feed/history/releases.json
+++ b/feed/history/releases.json
@@ -4,7 +4,7 @@
         "release_status": "dev",
         "version": "1.62.0",
         "documentation": "/doc/libs/master/",
-        "download_page": null
+        "download_page": "https://sourceforge.net/projects/boost/files/boost/snapshots/master/"
     },
     "1.61.0": {
         "release_notes": "feed/history/boost_1_61_0.qbk",
