--- a/feed/history/releases.json
+++ b/feed/history/releases.json
@@ -1,10 +1,10 @@
 {
     "1.62.0": {
         "release_notes": "feed/history/boost_1_62_0.qbk",
-        "release_status": "dev",
+        "release_status": "beta",
         "version": "1.62.0",
-        "documentation": "/doc/libs/master/",
-        "download_page": "https://sourceforge.net/projects/boost/files/boost/snapshots/master/"
+        "documentation": "/doc/libs/1_62_0_b1/",
+        "download_page": "https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/"
     },
     "1.61.0": {
         "release_notes": "feed/history/boost_1_61_0.qbk",
