--- a/feed/history/releases.json
+++ b/feed/history/releases.json
@@ -15,7 +15,7 @@
                 "line_endings": "unix"
             },
             {
-                "url": "https://sourceforge.net/projects/boost/files/boost/1.62.0.beta./boost_1_62_0_b2.7z",
+                "url": "https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.7z",
                 "line_endings": "windows"
             },
             {
