--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -28,9 +28,16 @@ RewriteRule ^tools/build/(.*\.(?:png|gif|jpg|jpeg|jpe|css|js|pdf|dtd))$ archives
 RewriteRule ^libs/release/libs/([^./]+)$ libs/release/libs/$1/ [R=301]
 RewriteRule ^libs/development/libs/([^./]+)$ libs/development/libs/$1/ [R=301]
 
+# REDIRECT_UPDATE_START
+#
+# This section is automatically updated.
+# Any edits will be overwritten.
+#
 # Redirect from symbolic names to current versions.
 RewriteRule ^libs/release(/.*)?$ libs/1_62_0$1 [R=303]
 RewriteRule ^libs/development(/.*)?$ libs/1_62_0$1 [R=303]
+#
+# REDIRECT_UPDATE_END
 
 # Rewrite specific versions to the dynamic handlers.
 RewriteRule ^libs/(master|develop|latest|[0-9_]+(?:b(?:eta)?[0-9]*|snapshot)?)/?$ libraries.php/$1 [L]
