Fix travis label

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
             - git status
       # Second configuration tries running the site update scripts
       # using a more recent version of the boost tools.
-      - env: LABEL="Test building documentation"
+      - env: LABEL="Test building release notes"
         sudo: required
         dist: trusty
         addons:
