Don't use quickbook on travis
The version in the Ubuntu distribution is too old, which was causing a
build error somewhere. Will need to use a more recent version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ matrix:
       - env: LABEL="Test building release notes"
         sudo: required
         dist: trusty
-        addons:
-            apt:
-                packages:
-                    - libboost-tools-dev
+        #addons:
+        #    apt:
+        #        packages:
+        #            - libboost-tools-dev
         # Not really, but more appropriate than 'ruby', and helps
         # distinguish from 'php'.
         language: c++
