Copy local changes from server
To have a record of what's actually in use, to make it easier to change them,
and to make updating the website simpler.

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,11 @@
+Deny from 65.55.52.94
+Deny from 100.43.83.160
+Deny from 110.209.193.111
 AddType text/html .shtml
 AddOutputFilter INCLUDES .shtml
 AddOutputFilter INCLUDES .html
+
+Options -MultiViews
 
 AddType text/x-component .htc
 
