Update wiki redirect

--- a/.htaccess
+++ b/.htaccess
@@ -72,7 +72,7 @@ RewriteRule ^status(.*) development/testing.html [R=permanent,L]
 # The tools pages (todo)
 RewriteRule ^tools(/.*)?$ doc/tools$1 [R=permanent,L]
 # The wiki
-RewriteRule ^wiki/?$ http://svn.boost.org/trac/boost [R,L]
+RewriteRule ^wiki/?$ https://svn.boost.org/trac10/wiki [R,L]
 # The license file. (This link was never correct, but it's common enough to require a redirect).
 RewriteRule ^LICENSE-1.0$ LICENSE_1_0.txt [R=permanent,L]
 
